Closed Bug 199942 Opened 23 years ago Closed 17 years ago

Disposition notification not following rfc3798 because hostname of UA is missing in Reporting-UA:

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: v.solnicky, Assigned: mkmelin)

Details

Attachments

(1 file)

When mozilla returns a disposiytion notification, it adds an optional, but recommended header Reporting-UA: in a machine parsable secion of MDN. In this field (Reporting-UA) it violates RFC-2298 section 3.2.1 as mozilla does not include a mandatory first part, that is DNS name of the computer where UA is running on. NsC 4.x does it properly (well, sometimes it is nonly short name and not FQDN, but it is there). This bug may prevent machine parsers of this information to process the MDN properly and as just this part of MDN was proposed to be machine-readable it goes again the original intention of the RFC. On the other side I do not know how often it is parsed by programs and thus I do not know the importence of quick repairment. This is the reason I set the severity to normal. I saw it on Windows XP/IBM PC comaptible, but I think it is platform independent. Thanks.
ccing cavin to get this on his radar.
Product: Browser → Seamonkey
Component: MailNews: Return Receipts → MailNews: Backend
QA Contact: grylchan → offline
MASS-CHANGE: This bug report is registered in the SeaMonkey product, but has been without a comment since the inception of the SeaMonkey project. This means that it was logged against the old Mozilla suite and we cannot determine that it's still valid for the current SeaMonkey suite. Because of this, we are setting it to an UNCONFIRMED state. If you can confirm that this report still applies to current SeaMonkey 2.x nightly builds, please set it back to the NEW state along with a comment on how you reproduced it on what Build ID, or if it's an enhancement request, why it's still worth implementing and in what way. If you can confirm that the report doesn't apply to current SeaMonkey 2.x nightly builds, please set it to the appropriate RESOLVED state (WORKSFORME, INVALID, WONTFIX, or similar). If no action happens within the next few months, we move this bug report to an EXPIRED state. Query tag for this change: mass-UNCONFIRM-20090614
Status: NEW → UNCONFIRMED
Assignee: bienvenu → nobody
Flags: wanted-seamonkey2?
QA Contact: offline → mailnews-backend
RFC 2298 is obsoleted by RFC 3798. And it's only a recommendation
Status: UNCONFIRMED → NEW
Component: MailNews: Backend → Backend
Product: SeaMonkey → MailNews Core
QA Contact: mailnews-backend → backend
Summary: Disposition notification violates RFC 2298 because hostname of UA is missing in Reporting-UA: → Disposition notification not following rfc3798 because hostname of UA is missing in Reporting-UA:
Attached patch proposed fix — — Splinter Review
Might as well fix it.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #384950 - Flags: superreview?(bienvenu)
Attachment #384950 - Flags: review?(bienvenu)
Attachment #384950 - Flags: superreview?(bienvenu)
Attachment #384950 - Flags: superreview+
Attachment #384950 - Flags: review?(bienvenu)
Attachment #384950 - Flags: review+
changeset: 3032:87bea4747dbf http://hg.mozilla.org/comm-central/rev/87bea4747dbf ->FIXED In case it doesn't show up for people that's because we couldn't figure out your correct host name - in that case Reporting-UA: is as before. (Shouldn't be uncommon, mine is unknown.)
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: wanted-seamonkey2?
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: