Bug 199942: Disposition notification not following rfc3798 because hostname of UA is missing in Reporting-UA:. r+sr=bienvenu